# tf_wrapper_segmentation

./: .gitignore  CMakeLists.txt  README.md  classes.csv  config.json
application/example/: CMakeLists.txt  main.cpp  main.h
cmake/: googletest-download.cmake  googletest.cmake
include/: interfaces.h  tensorflow_segmentator.h  wrapper_base.h
include/common/: common_ops.h  fs_handling.h
resources/: config.json
src/: CMakeLists.txt  interfaces.h  tensorflow_auxiliary.cpp  tensorflow_auxiliary.h  tensorflow_base.cpp  tensorflow_segmentator.cpp  tensorflow_segmentator.h  tensorflow_wrapper_core.cpp  tensorflow_wrapper_core.h  wrapper_base.cpp  wrapper_base.h  wrapper_interfaces.h  wrapper_legacy.cpp  wrapper_legacy.h
src/common/: common_ops.cpp  fs_handling.cpp  fs_handling.h
tests/: CMakeLists.txt  tf_test.cpp  tf_test.h
tests/tensorflowTests/: CMakeLists.txt  testTensorflowCorrectness.cpp
tf_wrapper/: CMakeLists.txt
tf_wrapper/include/tf_wrapper/: interfaces.h  tensorflow_auxiliary.h  tensorflow_base.h  tensorflow_segmentator.h  tensorflow_wrapper_core.h  wrapper_base.h  wrapper_interfaces.h
tf_wrapper/include/tf_wrapper/common/: common_ops.h  fs_handling.h
tf_wrapper/src/: tensorflow_auxiliary.cpp  tensorflow_base.cpp  tensorflow_segmentator.cpp  tensorflow_wrapper_core.cpp  wrapper_base.cpp
tf_wrapper/src/common/: common_ops.cpp  fs_handling.cpp
